<resources>
    <string name="app_name">MyCoolSportsApp</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Cool Sports App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notifications">Notifications</string>
    <string name="menu_home">Αγώνες</string>
    <string name="home__match_icon_desc">match Icon</string>
    <string name="home__match_date">17/2</string>
    <string name="home__match_time">17:00</string>
    <string name="home__match_default_text">Match X</string>


    <!--Match Details-->
    <string name="matchDetails__title">Λεπτομέρειες Αγώνα</string>
    <string name="matchDetails__sport">Αγώνισμα</string>
    <string name="matchDetails__result">Αποτέλεσμα</string>
    <string name="matchDetails__date">Ημερομηνία</string>
    <string name="matchDetails__place">Τοποθεσία</string>
    <string name="matchDetails__show">Προβολή</string>
    <string name="matchDetails__participation">Συμμετοχή</string>
    <string name="matchDetails__point">0</string>

    <string name="fab_add">Προσθήκη</string>

    <string-array name="SportTypes">
        <item>Team</item>
        <item>Single</item>
    </string-array>

    <string-array name="Genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--TODO: Kappa-->
    <string name="menu_data">Διαχείριση Δεδομένων</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Τοποθεσία Αγώνα</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="channel_name">Match Notifications</string>
    <string name="channel_description">Match Notifications Channel</string>
</resources>